Nicer styling of the club homepage

--- a/_data/navlist.yaml
+++ b/_data/navlist.yaml
@@ -20,3 +20,12 @@ navitems:
 
 - title: Club News
   url: pages/clubnews.html
+
+- title: Sponsors
+  url: pages/sponsors.html
+
+- title: Merchandise
+  url: pages/merchandise.html
+
+- title: History
+  url: pages/history.html    
